Fix nav spacing on lg and switch some heading from h2 to h1

--- a/src/less/nav.less
+++ b/src/less/nav.less
@@ -52,7 +52,7 @@
           }
 
           @media (min-width: @screen-lg) {
-            padding: 10px 7px;
+            padding: 10px 15px;
           }
 
           &:hover {
