--- a/src/less/site.less
+++ b/src/less/site.less
@@ -221,7 +221,7 @@ input {
 .comunicate {
   padding: 40px 0;
 
-  h2 {
+  h1 {
     margin-top: 0;
   }
 
@@ -569,7 +569,7 @@ footer {
   background-color: @blue-dull;
   font-size: 14px;
 
-  h2 {
+  h1 {
     color: @blue;
   }
 }
